# chi-blog-api

./: .coveragerc  Dockerfile  Makefile  README.md  TODO.md  docker-compose-prod.yml  docker-compose.yml  fill_db.py  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: app.py  config.py  error_handlers.py
app/articles/: dao.py  dto.py  exceptions.py  models.py  permissions.py  routes.py  services.py
app/articles/swagger/: docs.py
app/auth/: config.py  exceptions.py  jwt.py  protocols.py  routes.py  services.py
app/auth/swagger/: docs.py  securityschema.py
app/base/: response.py
app/db/: __init__.py  base.py  config.py  dao.py  database.py
app/permissions/: models.py  services.py
app/rbac/: dao.py  dto.py  exceptions.py  models.py  protocols.py  rbac.py  routes.py  services.py
app/rbac/dao/: permission.py  role.py
app/rbac/routes/: permission.py  role.py
app/rbac/services/: permission.py  role.py
app/rbac/swagger/docs/: role.py  (+1 more)
app/users/: dao.py  dto.py  exceptions.py  models.py  protocols.py  pwd.py  routes.py  services.py
app/users/swagger/: docs.py
app/utils/: response.py
migrations/: env.py
migrations/versions/: 297bd8f36dcd_bind_user_and_role_models.py  33c91b97b7c8_role_id_not_nullable_in_user_model.py  8ac8199df6b2_role_permisson_and_roles_permissions_.py  af34812e6bc2_cascade_deleting_of_roles_permissions.py  b90dbc679c16_users_model.py  df6d774a6953_article_model.py
nginx/: nginx.conf
scripts/: run.sh  runprod.sh
secrets/: example.env
tests/: conftest.py
tests/postman/: Chi blog testing.postman_collection.json
(+10 files in other folders)
