[tool.poetry]
name = "chi-blog-api"
version = "0.1.0"
description = ""
authors = ["MuzykaAndrii <andrymyzik@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.1.0"
SQLAlchemy = "^2.0.36"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"
psycopg2 = "^2.9.10"
bcrypt = "^4.2.1"
alembic = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
