[tool.poetry]
name = "chi-blog-api"
version = "0.1.0"
description = ""
authors = ["MuzykaAndrii <andrymyzik@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.1.0"
SQLAlchemy = "^2.0.36"
pydantic = {extras = ["email"], version = "^2.10.2"}
pydantic-settings = "^2.6.1"
psycopg2 = "^2.9.10"
bcrypt = "^4.2.1"
alembic = "^1.14.0"
pyjwt = "^2.10.0"
flasgger = "^0.9.7.1"
flask-cors = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [".", "app"]
python_files = ["*_test.py", "test_*.py"]